examples/k8s-deploy-shared-manifests/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${var.appName}
  name: ${var.appName}
spec:
  type: ClusterIP
  ports: ${jsonEncode(var.servicePorts)}
  selector:
    app: ${var.appName}
